--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -4,24 +4,37 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html">
 <head>
+<h:outputStylesheet library="css" name="style.css"/>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
-<title>Insert title here</title>
-<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
-	integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
-	crossorigin="anonymous"></link>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+</link><title>Login Page</title>
 </head>
 <h:body>
-
-	<h:form id="loginForm">
-		<h:outputLabel value="username " />
+<style>
+.abc
+{
+    margin: 100px 100px 100px 100px;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #a9c6da;
+    height: 100%;
+}
+</style>
+<div class="container">
+	<h:form class="abc">	
+		<h:outputLabel value="username" /><br/>
 		<h:inputText value="#{login_bean.username}" />
 		<br />
-		<h:outputLabel value="password" />
-		<h:inputSecret value="#{login_bean.password}"></h:inputSecret>
-		<h:commandButton value="Login" class="btn btn-primary"
+		<h:outputLabel value="password" /><br/>
+		<h:inputSecret value="#{login_bean.password}"></h:inputSecret><br/>
+		<h:commandButton class="button" value="Login" 
 			action="#{login_bean.login()}"></h:commandButton>
-	</h:form>
+	
+</h:form>
+</div>
 
 </h:body>
 </html>
